# nuodb-drivers

perl_dbi/: Makefile.PL
php_pdo/: do_linux64
php_pdo/pdo_nuodb/: CMakeLists.txt  nuodb_driver.c  nuodb_statement.c  pdo_nuodb.c  pdo_nuodb.cbp  pdo_nuodb.layout  php_pdo_nuodb_c_cpp_common.h  php_pdo_nuodb_cpp_int.cpp  php_pdo_nuodb_cpp_int.h  php_pdo_nuodb_int.h
php_pdo/pdo_nuodb/tests/: complex.phpt  prepared_statements4.phpt
